tests/conformance/syntax/positive/refl_term_valid.ditt
module Syntax.ReflTerm where

postulate C : Cat

refl_ascii (x : C) : x ->[C] x = refl x
refl_paren (x : C) : x ->[C] x = refl (x)
