tests/conformance/syntax/negative/directed_hom_bad_invalid.ditt
module Syntax.DirectedHomFormsBad where

postulate C : Cat
bad (x : C) : x ->C] x = refl x
